# example-paper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  README.md  _config.yml  _toc.yml  cspell.json  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt
.github/workflows/: build_docs.yml  deploy.yml  deploy_docs.yml  docker-image.yml  pre-commit.yml  reproduce_results.yml
code/: demo.ipynb  demo.py  postprocess.py  pre_processing.py  run_all.py  run_simulation.py
data/: README.md  data.json
docker/: Dockerfile
docs/: _config.yml  _toc.yml  abstract.md  citation.md  index.md  refs.bib  reproducing.md
