[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "example-paper"
description = "Example paper with code"
authors = [
    {name = "Jørgen S. Dokken", email = "dokken@simula.no"},
    {name = "Henrik N. Finsberg", email = "henriknf@simula.no"}
]
readme = "README.md"
requires-python = ">=3.8"
version = "0.1.0"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "ap_features",
    "pandas",
    "jinja2",
]

[project.optional-dependencies]
dev = [
   "pdbpp", # Better debugger
   "pre-commit", # For pre-commit hooks
]

docs = [
    "jupyter-book", # Required to build documentation
    "jupytext", # Required to convert .py to .ipynb files
    "sphinxcontrib-bibtex",  # For bibliography
]


[tool.mypy]
ignore_missing_imports = true # Does not show errors when importing untyped libraries
exclude = [ # We only want mypy to consider files that are not generated in installing or building documentation
    "docs/",
    "build/"
]
files = [  # Folder to which files that should be checked by mypy
    "code",
]
