[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-paper"
classifiers = ["Private :: Do Not Upload"]
version = "0"
dependencies = [
    "ap_features",
    "matplotlib",
    "numpy",
    "scipy",
    "pandas[output-formatting]",
]


[project.optional-dependencies]
dev = [
    "pdbpp",
    "pre-commit",
]
docs = [
    "jupyter-book",
    "jupytext",
    "sphinxcontrib-bibtex",
]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E402", "E741", "E731", "E743"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
